fix: 修复多个模型节点的参数问题
- 添加 parse_default_from_description 从描述中解析参数默认值
- 添加 parse_range_from_description 从描述中解析取值范围
- 修复 Flux Kontext Dev/Max 的 num_images/guidance_scale 默认值
- 修复 Seedream 4.0 max_images 参数的错误 enum 配置
- 添加 Nano Banana Pro Light 模型的 images 参数处理
- 添加 debug 日志帮助排查 prompt 传递问题

--- a/model_config.json
+++ b/model_config.json
@@ -5670,10 +5670,8 @@
           "description": "指定此请求中要生成的最大图像数量。此参数仅在`sequential_image_generation`设置为`auto`时有效。\n  \n\n  取值范围：`[1, 15]`\n\n  <Tip>\n    说明\n\n    实际生成的图像数量受`max_images`和输入参考图像数量的影响。输入参考图像数量 + 生成图像数量 ≤ 15。\n  </Tip>",
           "required": false,
           "default": 15,
-          "enum": [
-            "auto",
-            "max_images"
-          ]
+          "minimum": 1,
+          "maximum": 15
         },
         {
           "name": "watermark",
